syntax = "proto3";

package chat;

option go_package = "chatpb";

service ChatService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc GetRoomByUser(GetRoomRequest) returns (GetRoomResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessageHistory(GetHistoryRequest) returns (GetHistoryResponse);
  rpc StoreInactiveMessages(InactiveMessagesRequest) returns (InactiveMessagesResponse);
}

message CreateRoomRequest {
  string user1 = 1;
  string user2 = 2;
}

message CreateRoomResponse {
  string room_id = 1;
}

message GetRoomRequest {
  string user_id = 1;
}

message GetRoomResponse {
  string room_id = 1;
}

message SendMessageRequest {
  string room_id = 1;
  string sender_id = 2;
  string message = 3;
}

message SendMessageResponse {
  bool success = 1;
}

message GetHistoryRequest {
  string room_id = 1;
}

message GetHistoryResponse {
  repeated string messages = 1;
}

message InactiveMessagesRequest {
  string room_id = 1;
  repeated string messages = 2;
}

message InactiveMessagesResponse {
  bool success = 1;
}
